--- a/src/app/components/parent/parent.component.html
+++ b/src/app/components/parent/parent.component.html
@@ -1,4 +1,8 @@
 <app-child
-	(emitter)="test($event)"
-	greeting="salut!">
+	(emitter)="received = $event">
 </app-child>
+
+<p>
+	<strong>Recu de l'enfant</strong>
+	{{received}}
+</p>
